Update Repo unit tests